# beachfront

./: Cargo.toml  README.md
assets/registry/: entity.json  items.json
crates/discriminant/: Cargo.toml
crates/discriminant/src/: lib.rs
crates/discriminant_proc_macro/: Cargo.toml
crates/discriminant_proc_macro/src/: lib.rs
crates/run_once/: Cargo.toml
crates/run_once/src/: lib.rs
src/: assets.rs  entity.rs  main.rs  mesh.rs  opengl.rs  pipeline.rs  render.rs  textures.rs  wgpu.rs  window.rs
src/entity/: mod.rs  movement.rs  player.rs
src/registry/: items.rs  mod.rs
src/render/: animation.rs  mod.rs
