[package]
name = "farm-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["bevy_sprite"] }
bevy_asset_loader = { version = "0.22" }                     # no later version for bevy:0.16
iyes_loopless = "0.9.1"
run_once = { path = "crates/run_once" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
bevy-inspector-egui = "0.30.0"
internment = "0.8.6"
avian2d = { version = "0.2.1", features = ["simd"] }
